# iris

./: .gitignore  CMakeLists.txt  README  README.md  build.pri  common.pri  confapp_win.pri.example  configure  iris.pri  iris.pro  iris.qc
.github/workflows/: ci.yml
cmake/modules/: IrisSCTP.cmake  fix-codestyle.cmake  usrsctp.patch
include/: irisnetexport.h  irisnetglobal.h  irisnetplugin.h  jdns.h  jdnsshared.h  jid.h  netinterface.h  netnames.h  processquit.h  qjdns.h
include/iris/: ice176.h  iceabstractstundisco.h  jid.h  stunallocate.h  stunbinding.h  stunmessage.h  stuntransaction.h  turnclient.h  xmpp_jid.h  xmpp_stundisco.h
irisnet/: jdnsshared.cpp
irisnet/jdns/: jdns_mdnsd.c
qcm/: buildmode.qcm  extra.qcm  idn.qcm  qca.qcm  qjdns.qcm  qt42.qcm  universal.qcm  zlib.qcm
src/: libbase.pri  src.pro
src/irisnet/: CMakeLists.txt  irisnet.pri  irisnet.pro
src/irisnet/appledns/: appledns.cpp  appledns.pri  appledns.pro  qdnssd.cpp  qdnssd.h  sdtest.cpp  sdtest.pro
src/irisnet/corelib/: addressresolver.cpp  addressresolver.h  corelib.pri  corelib.pro  iputil.cpp  iputil.h  irisnetglobal.cpp  irisnetplugin.cpp  irisnetplugin.h  jdnsshared.cpp  jdnsshared.h  netavailability.cpp  netavailability.h  netinterface.cpp  netinterface.h  netinterface_qtname.cpp  netinterface_qtnet.cpp  netinterface_unix.cpp  netnames.cpp  netnames.h  netnames_jdns.cpp  objectsession.cpp  objectsession.h
src/irisnet/noncore/: dtls.cpp  dtls.h  ice176.cpp  ice176.h  iceabstractstundisco.h  iceagent.cpp  iceagent.h  icecandidate.cpp  icecandidate.h  icecomponent.cpp  icecomponent.h  icelocaltransport.cpp  icelocaltransport.h  icetransport.h  iceturntransport.cpp  iceturntransport.h  noncore.pri  noncore.pro  processquit.cpp  processquit.h  stunallocate.cpp  stunallocate.h  stunbinding.cpp  stunbinding.h  stunmessage.cpp  stunmessage.h  stunsession.cpp  stunsession.h  stuntransaction.cpp  stuntransaction.h  stuntypes.cpp  stuntypes.h  stunutil.cpp  stunutil.h  tcpportreserver.cpp  tcpportreserver.h  transportaddress.h  turnclient.cpp  turnclient.h  udpportreserver.cpp  (+1 more)
src/irisnet/noncore/cutestuff/: bsocket.cpp  bsocket.h  bytestream.cpp  bytestream.h  cutestuff.pri  httpconnect.cpp  httpconnect.h  httppoll.cpp  httppoll.h  httpstream.cpp  networkaccessmanager.cpp  networkaccessmanager.h  socks.cpp  socks.h
src/irisnet/noncore/ice/: ice176.cpp  ice176.h  iceabstractstundisco.h  iceagent.h  icecandidate.h  icecomponent.cpp  icecomponent.h  icelocaltransport.cpp  icelocaltransport.h  icetransport.cpp  iceturntransport.cpp  iceturntransport.h  localaddress.cpp  localaddress.h
src/irisnet/noncore/legacy/: ndns.cpp  ndns.h  srvresolver.cpp  srvresolver.h
src/irisnet/noncore/stun/: stunallocate.cpp  stunbinding.cpp  stunmessage.cpp  stunmessage.h  stuntransaction.cpp  stuntransaction.h  turnclient.cpp  turnclient.h
src/jdns/: TODO  jdns.c  jdns.h  jdns_mdnsd.c  jdns_p.h  jdns_packet.c  jdns_sys.c  jdns_util.c  qjdns.cpp
src/jdns/include/jdns/: qjdns.h  qjdnsshared.h
src/jdns/src/qjdns/: qjdns_p.h  qjdnsshared.cpp  qjdnsshared_p.h
src/jdns/tools/jdns/: main.h
src/libidn/: libidn.pri
src/xmpp/: CMakeLists.txt  jid.cpp  xmpp.pri  xmpp.pro
src/xmpp/base/: randomnumbergenerator.h  randrandomnumbergenerator.h  timezone.h
src/xmpp/base/unittest/: checker.cpp  incrementingrandomnumbergenerator.h  randomnumbergeneratortest.cpp  randomnumbergeneratortest.h  randrandomnumbergeneratortest.cpp  randrandomnumbergeneratortest.h  unittest.pro
src/xmpp/blake2/: blake2b-ref.c  blake2s-ref.c
src/xmpp/cutestuff/: bsocket.cpp  bsocket.h  cutestuff.pri  httpconnect.cpp  httppoll.cpp  socks.cpp  socks.h
src/xmpp/jid/: jid.cpp  jid.h  jid.pri
src/xmpp/jid/unittest/: jidtest.cpp
src/xmpp/qa/: unittest.h  unittest.pri
src/xmpp/qa/qttestutil/: simplechecker.cpp  testregistration.h  testregistry.h
src/xmpp/qa/qttestutil/example/: example.pro  myfirstclasstest.cpp  mysecondclasstest.cpp
src/xmpp/qa/unittest.template/: myclasstest.cpp
src/xmpp/sasl/: digestmd5proplist.h  digestmd5response.cpp  digestmd5response.h  plainmessage.h  scramsha1message.h  scramsha1response.cpp  scramsha1response.h  scramsha1signature.h
src/xmpp/sasl/unittest/: checker.cpp  digestmd5responsetest.cpp  digestmd5responsetest.h  plainmessagetest.cpp  plainmessagetest.h  scramsha1messagetest.cpp  scramsha1responsetest.cpp  unittest.pro
src/xmpp/xmpp-core/: compressionhandler.h  connector.cpp  jid.cpp  jid.h  parser.cpp  parser.h  protocol.cpp  protocol.h  securestream.cpp  securestream.h  simplesasl.cpp  sm.cpp  sm.h  stream.cpp  tlshandler.cpp  xmlprotocol.cpp  xmlprotocol.h  xmpp.h  xmpp_clientstream.h  xmpp_stanza.cpp  xmpp_stanza.h  xmpp_stream.h
src/xmpp/xmpp-im/: client.cpp  filetransfer.cpp  filetransfer.h  httpfileupload.cpp  httpfileupload.h  im.h  jingle-application.cpp  jingle-application.h  jingle-connection.cpp  jingle-connection.h  jingle-ft.cpp  jingle-ft.h  jingle-ibb.cpp  jingle-ibb.h  jingle-ice.cpp  jingle-ice.h  jingle-s5b.cpp  jingle-s5b.h  jingle-sctp-association_p.cpp  jingle-sctp-association_p.h  jingle-sctp.cpp  jingle-sctp.h  jingle-session.cpp  jingle-transport.cpp  jingle-transport.h  jingle-webrtc-datachannel_p.cpp  jingle-webrtc-datachannel_p.h  jingle.cpp  jingle.h  s5b.cpp  s5b.h  stundisco.cpp  stundisco.h  types.cpp  xmpp_address.h  xmpp_agentitem.h  xmpp_bitsofbinary.cpp  xmpp_bitsofbinary.h  xmpp_bytestream.h  xmpp_caps.cpp  (+58 more)
src/xmpp/zlib/: zlibcompressor.h  zlibdecompressor.h
tools/: tools.pro
tools/icetunnel/: CMakeLists.txt  main.cpp
tools/nettool/: main.cpp  nettool.pro
tools/xmpptest/: ui_test.ui  xmpptest.cpp  xmpptest.pro
